--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ optimize-ast=no
 # can either give multiple identifiers separated by comma (,) or put this
 # option multiple times (only on the command line, not in the configuration
 # file where it should appear only once).
-disable=C0103,C0111,C0301,C0302,C0330,E1101,R0201,R0205,R0401,R0801,R0901,R0902,R0903,R0904,R0912,R0913,R0914,R0915,R1701,R1705,R1710,R1714,W0511,W0612,W0613
+disable=C0103,C0111,C0301,C0302,C0330,E1101,R0201,R0205,R0401,R0801,R0901,R0902,R0903,R0904,R0912,R0913,R0914,R0915,R1701,R1705,R1710,W0511,W0612,W0613
 #C0103 - name-nonconformat
 #C0111 - missing-docstring
 #C0301 - line-too-long
@@ -41,7 +41,6 @@ disable=C0103,C0111,C0301,C0302,C0330,E1101,R0201,R0205,R0401,R0801,R0901,R0902,
 #R1701 - consider-merging-isinstance
 #R1705 - no-else-return
 #R1710 - inconsistent-return-statements
-#R1714 - consider-using-in
 #W0511 - fixme
 #W6012 - unused-vairable
 #W0613 - unused-argument
